REST-9 + new feature: edit fields + new feature: delete fields - bug fix: overflow scrolls

--- a/src/main/resources/static/css/foreignMain.css
+++ b/src/main/resources/static/css/foreignMain.css
@@ -11,7 +11,7 @@
 
    padding: 15px 30px;
    gap: 45px;
-   overflow: scroll;
+   overflow: auto;
 }
 
 h1 {
