--- a/src/main/resources/static/css/sockets.css
+++ b/src/main/resources/static/css/sockets.css
@@ -5,6 +5,7 @@
    align-self: stretch;
    flex-grow: 1;
    border-radius: 16px;
+   overflow: hidden;
 }
 
 .main>*:not(:nth-child(1)) {
@@ -30,14 +31,14 @@ h1 {
    background-color: rgba(0, 0, 0, 0.1);
    border-radius: 16px;
    padding: 15px 30px;
-   overflow-y: scroll;
+   overflow: auto;
 }
 
 .canvas li::before {
    content: attr(author);
    color: red;
    /* margin: 0 1ch 0 0; */
-   overflow-y: scroll;
+   overflow: auto;
 }
 
 .UI {
